# django-starterkit

./: .bandit.yml  .env.dist  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bitbucket-pipelines.application.yml  bitbucket-pipelines.yml  docker-compose.yaml  pyproject.toml  tavern_config.yaml
api_chart/: Chart.yaml  values.yaml
polar_labs/: manage.py
polar_labs/blog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
polar_labs/blog/api_tests/: test_endpoints.py
polar_labs/blog/fixtures/: test_data.json
polar_labs/blog/integ_tests/: blog.tavern.yaml  schemas.py  test_endpoints.py
polar_labs/blog/migrations/: 0001_initial.py  0002_alter_blogpost_tags.py  0003_blogpost_slug.py  0004_alter_blogpost_tags.py  0005_alter_blogpost_options_alter_blogposttag_options_and_more.py
polar_labs/blog/unit_tests/: test_models.py
polar_labs/core/: admin.py  api_config.py  base_admin.py  base_models.py  base_tests.py  models.py
polar_labs/core/management/commands/: ensure_adminuser.py  ensure_migrations.py  ensure_tests_run.py
polar_labs/core/middleware/: gen_request_id.py
polar_labs/core/migrations/: 0001_initial.py
polar_labs/core/utils/: __init__.py  cms.py  tavern.py
polar_labs/polar_labs/: asgi.py  settings.py  urls.py  wsgi.py
