[tool.poetry]
name = "polar-labs-django"
version = "0.1.0"
description = ""
authors = ["Mike Lecomte <m.lecomte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-environ = "^0.11.2"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
