[tool.poetry]
name = "polar_labs"
version = "0.1.0"
description = ""
authors = ["Mike Lecomte <m.lecomte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-environ = "^0.11.2"
psycopg = "^3.1.18"
djangorestframework = "^3.14.0"
django-storages = "^1.14.2"
boto3 = "^1.34.58"
django-summernote = "^0.8.20.0"
django-jet-reboot = "^1.3.7"
django-autoslug = "^1.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
